# podmind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cron/: com.podcast-wiki.daily.plist.template  com.podcast-wiki.whisper.plist.template  daily.sh  whisper.sh
docs/: AGENTS-vault.md  CLAUDE-vault.md  OPERATIONS.md
examples/demo-vault/.obsidian/: app.json  graph.json
examples/demo-vault/prebaked-results/: 01.json  02.json  03.json
examples/demo-vault/wiki/: index.md  log.md
examples/demo-vault/wiki/episodes/: signals-and-noise-2026-05-02-why-transcripts-beat-show-notes.md  signals-and-noise-2026-05-09-local-first-knowledge-bases.md  signals-and-noise-2026-05-16-the-economics-of-cheap-llms.md
podmind/: __init__.py  cli.py  curation.py  digest_email.py  digest_select.py  embeddings.py  enrich.py  frontmatter.py  jsonio.py  llm.py  llm_json.py  paths.py  pocketcasts.py  proposals.py  refresh_badges.py  secrets.py  slugs.py  sync.py  threads.py  threads_llm.py  transcript.py  transcripts.py  youtube.py  youtube_history.py
scripts/: demo.sh  install_launchd.sh
tests/: conftest.py  test_cli.py  test_curate.py  test_curation.py  test_digest_email.py  test_digest_select.py  test_embeddings.py  test_enrich.py  test_frontmatter.py  test_lint.py  test_llm.py  test_llm_json.py  test_proposals.py  test_repair_episode_links.py  test_review_fixes.py  test_slugs.py  test_threads.py  test_tick_finalize_log.py  test_tick_prep_only.py  test_transcribe_all.py  test_transcripts.py
(+18 files in other folders)
