[project]
name = "podmind"
version = "0.1.0"
description = "Karpathy-style LLM-built knowledge wiki of podcast subscriptions and YouTube watch-history."
requires-python = ">=3.12"
authors = [{ name = "Arnd Kohrs" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0.11",
    "python-slugify>=8.0",
    "platformdirs>=4.2",
    "rich>=13.7",
    "pyyaml>=6.0.3",
    "numpy>=2.4.4",
]

[project.urls]
Homepage = "https://github.com/DexMind-AI/podmind"
Repository = "https://github.com/DexMind-AI/podmind"

[project.optional-dependencies]
whisper = ["mlx-whisper>=0.4"]
stats = ["matplotlib>=3.9", "pandas>=2.2", "numpy>=1.26"]
all = [
    "mlx-whisper>=0.4",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "yt-dlp",
]

[project.scripts]
podmind-sync = "podmind.sync:main"
podmind-transcript = "podmind.transcript:main"
podmind-youtube = "podmind.youtube:main"
podmind-youtube-history = "podmind.youtube_history:main"
podmind-refresh-badges = "podmind.refresh_badges:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["podmind"]
